--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -104,3 +104,32 @@ html{
 }
 
 
+
+.gradient-border-button {
+  position: relative; 
+  background: transparent; /* Transparent background */
+  border: none; /* Remove default border */
+  border-radius: 5px; /* Add border radius */
+  padding: 1.75rem 2rem; /* Adjust padding as needed */
+  font-size: 20px; /* Adjust font size */
+  font-weight: bold; /* Adjust font weight */
+  color: white; /* Adjust text color */
+  overflow: hidden; /* Ensure the pseudo-element doesn't overflow */
+}
+
+.gradient-border-button::before {
+  content: ''; 
+  position: absolute; 
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1; 
+  background: linear-gradient(89.51deg, #761EFE -22.31%, #A22CFC 3.65%, #766BF3 51.69%, #38C1E5 111.57%); /* Gradient background */
+  border-radius: 5px; 
+  padding: 2px; 
+  -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0); /* Clip the gradient to the border */
+  mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0); /* Clip the gradient to the border */
+  -webkit-mask-composite: xor; 
+  mask-composite: exclude; 
+}
