--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -565,3 +565,27 @@ html{
 .wrap .flipper:nth-of-type(30) .inner {
   -webkit-animation-delay: -3.8709677419s;
           animation-delay: -3.870967741}
+
+          .custom-scrollbar::-webkit-scrollbar {
+            width: 5px; 
+          }
+          
+          .custom-scrollbar::-webkit-scrollbar-track {
+            background: transparent; 
+          }
+          
+          .custom-scrollbar::-webkit-scrollbar-thumb {
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 10px;
+          }
+          
+          .custom-scrollbar::-webkit-scrollbar-thumb:hover {
+            background: rgba(255, 255, 255, 0.4); 
+          }
+          
+      
+          .custom-scrollbar {
+            scrollbar-width: thin;
+            scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
+          }
+          
